pkg/cmd/kurel/testdata/daemonset-httproute/expected.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: agent
    launcher.gokure.dev/component: agent
  name: agent
  namespace: default
spec:
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
        launcher.gokure.dev/component: agent
    spec:
      automountServiceAccountToken: false
      containers:
      - image: ghcr.io/example/agent:v1.0
        name: agent
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
  updateStrategy: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent-http
    launcher.gokure.dev/component: agent-http
  name: agent-http
  namespace: default
spec:
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: agent
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: agent-http
    launcher.gokure.dev/component: agent-http
  name: agent-http-httproute
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - backendRefs:
    - name: agent-http
      port: 9090
